[gd_scene load_steps=8 format=3 uid="uid://ccde40nu5mmu4"]

[ext_resource type="Script" path="res://Scripts/document/alien_doc_panel.gd" id="1_jsekx"]
[ext_resource type="Texture2D" uid="uid://bmue0oyst1hl2" path="res://Art/Doc/Visa_base.png" id="1_o3lvh"]
[ext_resource type="Texture2D" uid="uid://ctfr0d83rct5m" path="res://Art/SpeciesSymbol/SpeciesSymbol_Marquatic.png" id="2_lpei4"]
[ext_resource type="FontFile" uid="uid://c1057dmhn6pcc" path="res://fonts/TT Interphases Pro Trial Bold.ttf" id="3_c0rh1"]
[ext_resource type="Texture2D" uid="uid://ddfw4oo2jndo2" path="res://Art/StarSectorSymbol/StarSec_Triangle1.png" id="3_wp4qw"]
[ext_resource type="Texture2D" uid="uid://cx2jimv470lsf" path="res://Art/Stamp/StampOfficial_2.png" id="4_lmcd8"]
[ext_resource type="FontFile" uid="uid://dn2d53gmfg845" path="res://fonts/TT Interphases Pro Trial DemiBold.ttf" id="6_wyl0j"]

[node name="alien_doc_panel" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jsekx")

[node name="doc_info_panel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -315.0
offset_top = -428.0
offset_right = 315.0
offset_bottom = 428.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_o3lvh")
expand_mode = 1

[node name="name" type="Label" parent="doc_info_panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.075
anchor_top = 0.100467
anchor_right = 0.928587
anchor_bottom = 0.159
offset_left = -0.25
offset_right = -0.0100098
offset_bottom = -0.104004
theme_override_fonts/font = ExtResource("3_c0rh1")
theme_override_font_sizes/font_size = 40
text = "TRADGEDEIGH"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="species" type="Label" parent="doc_info_panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.075
anchor_top = 0.163551
anchor_right = 0.928587
anchor_bottom = 0.203393
offset_left = -0.25
offset_right = -0.0100098
offset_bottom = -0.104004
theme_override_fonts/font = ExtResource("3_c0rh1")
theme_override_font_sizes/font_size = 20
text = "MARQUATIC"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="species_sym" type="TextureRect" parent="doc_info_panel"]
self_modulate = Color(1, 1, 1, 0.607843)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_top = 0.121495
anchor_right = 0.7
anchor_bottom = 0.121495
offset_right = 100.0
offset_bottom = 100.0
texture = ExtResource("2_lpei4")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="sec_sym" type="TextureRect" parent="doc_info_panel"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
anchor_left = -0.506349
anchor_top = 0.0186916
anchor_right = -0.506349
anchor_bottom = 0.0186916
offset_left = 419.0
offset_top = 201.0
offset_right = 479.0
offset_bottom = 261.0
texture = ExtResource("3_wp4qw")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="star_sec" type="Label" parent="doc_info_panel"]
layout_mode = 2
anchor_left = 0.0904762
anchor_top = -0.127336
anchor_right = 0.0904762
anchor_bottom = -0.127336
offset_left = 120.0
offset_top = 334.0
offset_right = 401.0
offset_bottom = 376.0
theme_override_fonts/font = ExtResource("3_c0rh1")
theme_override_font_sizes/font_size = 30
text = "Star Sector - B124 II"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="description" type="Label" parent="doc_info_panel"]
layout_mode = 2
anchor_left = 0.0904762
anchor_top = -0.088785
anchor_right = 0.22381
anchor_bottom = -0.0806075
offset_left = 120.0
offset_top = 355.0
offset_right = 401.0
offset_bottom = 397.0
theme_override_colors/font_color = Color(0.537255, 0.811765, 0.941176, 1)
theme_override_fonts/font = ExtResource("6_wyl0j")
theme_override_font_sizes/font_size = 16
text = "HAS AQUATIC FEATURES, IS NOT GRAY COLOURED, BLAH BLAH BLAH, LOREM IPSUM"
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="purpose" type="Label" parent="doc_info_panel"]
layout_mode = 2
anchor_left = 0.271
anchor_top = 0.513
anchor_right = 0.271
anchor_bottom = 0.513
offset_left = -100.73
offset_top = -21.128
offset_right = 101.27
offset_bottom = 20.872
theme_override_fonts/font = ExtResource("3_c0rh1")
theme_override_font_sizes/font_size = 20
text = "Anomalous Research"
horizontal_alignment = 1
vertical_alignment = 1

[node name="boarding" type="Label" parent="doc_info_panel"]
layout_mode = 2
anchor_left = 0.732
anchor_top = 0.513
anchor_right = 0.732
anchor_bottom = 0.513
offset_left = -101.16
offset_top = -21.128
offset_right = 100.84
offset_bottom = 20.872
theme_override_fonts/font = ExtResource("3_c0rh1")
theme_override_font_sizes/font_size = 20
text = "May 12 8034"
horizontal_alignment = 1
vertical_alignment = 1

[node name="expiry" type="Label" parent="doc_info_panel"]
layout_mode = 2
anchor_left = 0.564111
anchor_top = 0.858664
anchor_right = 0.564111
anchor_bottom = 0.858794
offset_left = -59.39
offset_top = -21.0161
offset_right = 99.6099
offset_bottom = 20.8719
theme_override_fonts/font = ExtResource("3_c0rh1")
theme_override_font_sizes/font_size = 24
text = "May 12 8034"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="stamp" type="TextureRect" parent="doc_info_panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.508
anchor_top = 0.732533
anchor_right = 0.508
anchor_bottom = 0.732533
offset_left = -100.04
offset_top = -120.048
offset_right = 99.96
offset_bottom = 79.952
texture = ExtResource("4_lmcd8")
expand_mode = 1
metadata/_edit_use_anchors_ = true
